--- a/public/options.css
+++ b/public/options.css
@@ -5,7 +5,7 @@ body {
 }
 
 .color-primary {
-    color: #FFBF00;
+    color: #00edf3;
 }
 
 .options-main {
@@ -18,15 +18,17 @@ body {
 
 .options-main h1 {
     text-align: center;
+    font-size: 28px;
 }
 
 .options-heading {
-    color: #FFBF00;
+    color: #00edf3;
     margin-top: 40px;
+    font-size: 24px;
 }
 
 .options-button {
-    background-color: #FFBF00;
+    background-color: #00edf3;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -35,5 +37,6 @@ body {
 }
 
 .options-paragraph {
+    font-size: 14px;
     margin-top: 20px;
 }
